sets a min-width for widget days so the icon doesn't get cut off (issue in twentyten so probably a problem in other themes as well)

--- a/css/calendar.css
+++ b/css/calendar.css
@@ -687,6 +687,7 @@ class name '.event-has-thumb' is added to top level parent event */
 .fc-view-agendaDay .fc-agenda-body   td div {min-height:50px;}
 #espresso_calendar .fc-view-agendaWeek  .thumb-wrap img {height: 20px;}
 
+
 /* Calendar Widget CSS */
 /* this stuff controls the widget styles and overrides some of the default stuff to make the widget prettier */
 /* added in 2.0 by Chris Reynolds */
@@ -703,11 +704,12 @@ class name '.event-has-thumb' is added to top level parent event */
 .espresso_calendar_widget a.fc-event-skin div {
 	background: url('images/tick-circle-frame.png') no-repeat 6px -24px; /* add an image instead */
 }
+.espresso_calendar_widget .fc-day-content { min-width: 26px; }
 .espresso_calendar_widget a.fc-event-skin div:hover { background-position:6px 0px!important; }
 /* fugue icon pack can be downloaded here: http://randyjensenonline.com/thoughts/wordpress-custom-post-type-fugue-icons/ */
 /* using this pack is good if you want to have the same hover effects, otherwise, you can use any icon or icon pack.  I also like http://famfamfam.com */
 .espresso_calendar_widget .fc-header h2 { font-size: 1.2em; font-weight: normal; } /* resets the height of the month name */
-.espresso_calendar_widget .fc-button-content { line-height: 16px; padding: 0 5px; height: 16px; font-size: 0.8em; } /* resets the button styles */
+.espresso_calendar_widget .fc-button-content { line-height: 16px; padding: 0 5px; height: 16px; } /* resets the button styles */
 .espresso_calendar_widget table.fc-header { margin-bottom: 0; } /* removes any padding under the header table (might be built into the theme's style.css) */
 .espresso_calendar_widget table.fc-border-separate tbody { font-size: 0.8em; } /* resets the font size of the dates */
 .espresso_calendar_widget table.fc-border-separate thead { font-size: 0.9em; } /* resets the font size of the day names */
